<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.tmorrissey1.shippingcalculator.MainActivity"
    android:background="@drawable/shipping_background"
    android:id="@+id/shippingRelativeLayout">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/top_banner"
        android:textColor="@android:color/black" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/weightEditText"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:backgroundTint="@color/accent_material_light"
        android:selectAllOnFocus="true"
        android:hint="@string/weight_edit_text_hint"
        android:textAlignment="center"
        android:textSize="40sp">
        <requestFocus/>
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/weight_unit_label"
        android:id="@+id/textView2"
        android:layout_below="@+id/weightEditText"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/base_cost_label"
        android:id="@+id/textView3"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/textView2"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/added_cost_label"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/total_cost_label"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/baseCostTextView"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignRight="@+id/weightEditText"
        android:layout_alignEnd="@+id/weightEditText"
        android:textAlignment="center"
        android:focusableInTouchMode="false"
        android:focusable="false"
        android:enabled="false"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/addedCostTextView"
        android:layout_below="@+id/baseCostTextView"
        android:layout_alignRight="@+id/baseCostTextView"
        android:layout_alignEnd="@+id/baseCostTextView"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/totalCostTextView"
        android:layout_below="@+id/addedCostTextView"
        android:layout_alignRight="@+id/addedCostTextView"
        android:layout_alignEnd="@+id/addedCostTextView"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

</RelativeLayout>
